--- a/ConfectioneryEnterprise.Web/ConfectioneryEnterprise.Web.csproj
+++ b/ConfectioneryEnterprise.Web/ConfectioneryEnterprise.Web.csproj
@@ -151,10 +151,27 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="css\bootstrap.css" />
+    <Content Include="css\main.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\banner-bg.jpg" />
+    <Content Include="img\logo.png" />
+    <Content Include="img\review-bg.jpg" />
+    <Content Include="img\top-banner.jpg" />
+    <Content Include="js\bootstrap.min.js" />
+    <Content Include="js\easing.min.js" />
+    <Content Include="js\jquery-2.2.4.min.js" />
+    <Content Include="js\jquery-ui.js" />
+    <Content Include="js\jquery.ajaxchimp.min.js" />
+    <Content Include="js\jquery.magnific-popup.min.js" />
+    <Content Include="js\jquery.nice-select.min.js" />
+    <Content Include="js\main.js" />
+    <Content Include="js\mn-accordion.js" />
+    <Content Include="js\owl.carousel.min.js" />
+    <Content Include="js\superfish.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -185,6 +202,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Menu.cshtml" />
+    <Content Include="Views\Home\Personal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
