--- a/ConfectioneryEnterprise.Web/ConfectioneryEnterprise.Web.csproj
+++ b/ConfectioneryEnterprise.Web/ConfectioneryEnterprise.Web.csproj
@@ -154,6 +154,7 @@
     </Compile>
     <Compile Include="Models\Generator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
