--- a/ConfectioneryEnterprise.Server/ConfectioneryEnterprise.Server.csproj
+++ b/ConfectioneryEnterprise.Server/ConfectioneryEnterprise.Server.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0E49E632-178F-4DC7-A08F-D082A8FB8488}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConfectioneryEnterprise.Core</RootNamespace>
-    <AssemblyName>ConfectioneryEnterprise.Core</AssemblyName>
+    <ProjectGuid>{DB7343B0-8DAB-432C-9A46-1ECEABE5BE83}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ConfectioneryEnterprise.Server</RootNamespace>
+    <AssemblyName>ConfectioneryEnterprise.Server</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,22 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\IUnitOfWork.cs" />
-    <Compile Include="Data\UnitOfWork.cs" />
-    <Compile Include="Data\IRepository.cs" />
-    <Compile Include="Data\Repository.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server\SynchronousSocketClient.cs" />
-    <Compile Include="Server\SynchronousSocketServer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ConfectioneryEnterprise\ConfectioneryEnterprise.csproj">
-      <Project>{83912b60-079a-487d-b9e0-96561b525845}</Project>
-      <Name>ConfectioneryEnterprise</Name>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConfectioneryEnterprise.Core\ConfectioneryEnterprise.Core.csproj">
+      <Project>{0e49e632-178f-4dc7-a08f-d082a8fb8488}</Project>
+      <Name>ConfectioneryEnterprise.Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
