--- a/ConfectioneryEnterprise.Web/ConfectioneryEnterprise.Web.csproj
+++ b/ConfectioneryEnterprise.Web/ConfectioneryEnterprise.Web.csproj
@@ -187,6 +187,12 @@
     </Content>
     <Content Include="Data\Clients.json" />
     <Content Include="Data\Confectioners.json" />
+    <Content Include="Data\Ingredients.json" />
+    <Content Include="Data\Pastiers.json" />
+    <Content Include="Data\PlanComponents.json" />
+    <Content Include="Data\Plans.json" />
+    <Content Include="Data\Productions.json" />
+    <Content Include="Data\Recipes.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
