added WCF services

--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -5,11 +5,30 @@
     </startup>
   <appSettings>
     <add key="filePastries" value="C:\Dasha\University\SeparatedData\confectioneryEnterprise\ConfectionaryEnterprise.WcfService\XML\Pastries.xml"/>
+    <add key="fileIngredients" value="C:\Dasha\University\SeparatedData\confectioneryEnterprise\ConfectionaryEnterprise.WcfService\XML\Ingredients.xml"/>
   </appSettings>
   <system.serviceModel>
     <services>
-      <service name="ConfectioneryEnterprise.WcfService.Contract.PastryService.PastryService" behaviorConfiguration="mexBehavior">
+      <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
+        <endpoint address="PastryService" binding="basicHttpBinding"
+          contract="ConfectioneryEnterprise.WcfService.Contract.PastryContract.IPastryService" />
+        <endpoint address="IngredientService" binding="basicHttpBinding" 
+          contract="ConfectionaryEnterprise.WcfService.Contract.PastryContract.IngredientContract.IIngredientService" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8080/" />
+          </baseAddresses>
+        </host>
       </service>
     </services>
+  <behaviors>
+    <serviceBehaviors>
+      <behavior name="mexBehavior">
+        <serviceMetadata httpGetEnabled="true"/>
+        <serviceDebug includeExceptionDetailInFaults="true"/>
+      </behavior>
+    </serviceBehaviors>
+  </behaviors>
   </system.serviceModel>
 </configuration>
