--- a/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
+++ b/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
@@ -45,12 +45,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contract\IBaseService.cs" />
+    <Compile Include="Contract\PastryContract\IngredientContract\IIngredientService.cs" />
+    <Compile Include="Contract\PastryContract\IngredientContract\IngredientService.cs" />
     <Compile Include="Contract\PastryContract\IPastryService.cs" />
     <Compile Include="Contract\PastryContract\PastryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="XML\Ingredients.xml" />
     <Content Include="XML\Pastries.xml" />
   </ItemGroup>
   <ItemGroup>
