added dynamic host configuration

--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -9,7 +9,8 @@
   </appSettings>
   <system.serviceModel>
     <services>
-      <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
+      <!--#Laboratorna5-->
+      <!--<service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
         <endpoint address="PastryService" binding="basicHttpBinding"
           contract="ConfectioneryEnterprise.WcfService.Contract.PastryContract.IPastryService" />
         <endpoint address="IngredientService" binding="basicHttpBinding" 
@@ -20,15 +21,23 @@
             <add baseAddress="http://localhost:8080/" />
           </baseAddresses>
         </host>
+      </service>-->
+      <service name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8080/" />
+          </baseAddresses>
+        </host>
       </service>
     </services>
-  <behaviors>
+  <!--#Laboratorna5-->
+  <!--<behaviors>
     <serviceBehaviors>
       <behavior name="mexBehavior">
         <serviceMetadata httpGetEnabled="true"/>
         <serviceDebug includeExceptionDetailInFaults="true"/>
       </behavior>
     </serviceBehaviors>
-  </behaviors>
+  </behaviors>-->
   </system.serviceModel>
 </configuration>
