--- a/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
+++ b/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
@@ -45,8 +45,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contract\PastryContract\IngredientContract\IIngredientService.cs" />
-    <Compile Include="Contract\PastryContract\IngredientContract\IngredientService.cs" />
+    <Compile Include="Contract\IGeneralService.cs" />
+    <Compile Include="Contract\IngredientContract\IIngredientService.cs" />
+    <Compile Include="Contract\IngredientContract\IngredientService.cs" />
     <Compile Include="Contract\PastryContract\IPastryService.cs" />
     <Compile Include="Contract\PastryContract\PastryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
