--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -10,34 +10,35 @@
   <system.serviceModel>
     <services>
       <!--#Laboratorna5-->
-      <!--<service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
+      <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
         <endpoint address="PastryService" binding="basicHttpBinding"
           contract="ConfectioneryEnterprise.WcfService.Contract.PastryContract.IPastryService" />
         <endpoint address="IngredientService" binding="basicHttpBinding" 
-          contract="ConfectionaryEnterprise.WcfService.Contract.PastryContract.IngredientContract.IIngredientService" />
+          contract="ConfectionaryEnterprise.WcfService.Contract.IngredientContract.IIngredientService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/" />
           </baseAddresses>
         </host>
-      </service>-->
-      <service name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
+      </service>
+      <!--#Laboratorna6-->
+      <!--<service name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/" />
           </baseAddresses>
         </host>
-      </service>
+      </service>-->
     </services>
   <!--#Laboratorna5-->
-  <!--<behaviors>
+  <behaviors>
     <serviceBehaviors>
       <behavior name="mexBehavior">
         <serviceMetadata httpGetEnabled="true"/>
         <serviceDebug includeExceptionDetailInFaults="true"/>
       </behavior>
     </serviceBehaviors>
-  </behaviors>-->
+  </behaviors>
   </system.serviceModel>
 </configuration>
