added using attribute - KnowType

--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -13,7 +13,7 @@
       <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
         <endpoint address="PastryService" binding="basicHttpBinding"
           contract="ConfectioneryEnterprise.WcfService.Contract.PastryContract.IPastryService" />
-        <endpoint address="IngredientService" binding="basicHttpBinding" 
+        <endpoint address="PastryService" binding="basicHttpBinding" 
           contract="ConfectionaryEnterprise.WcfService.Contract.IngredientContract.IIngredientService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
