added onedirectional and bidirectional messaging

--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -13,12 +13,15 @@
       <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
         <endpoint address="PastryService" binding="basicHttpBinding"
           contract="ConfectioneryEnterprise.WcfService.Contract.PastryContract.IPastryService" />
-        <endpoint address="PastryService" binding="basicHttpBinding" 
+        <endpoint address="IngredientService" binding="basicHttpBinding" 
           contract="ConfectionaryEnterprise.WcfService.Contract.IngredientContract.IIngredientService" />
+        <endpoint address="OneWayService" binding="basicHttpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IOneWayService" />
+        <endpoint address="DuplexFreshnessControlService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IDuplexFreshnessControlService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/" />
+            <add baseAddress="net.tcp://localhost:8081/" />
           </baseAddresses>
         </host>
       </service>
