--- a/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
+++ b/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
@@ -45,9 +45,11 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contract\IDuplexFreshnessControlService.cs" />
     <Compile Include="Contract\IngredientContract\IIngredientService.cs" />
     <Compile Include="Contract\IngredientContract\IIngredientServiceNew.cs" />
     <Compile Include="Contract\IngredientContract\IngredientService.cs" />
+    <Compile Include="Contract\IOneWayService.cs" />
     <Compile Include="Contract\PastryContract\IPastryService.cs" />
     <Compile Include="Contract\PastryContract\IPastryServiceNew.cs" />
     <Compile Include="Contract\PastryContract\PastryService.cs" />
