added using concurrency mode

--- a/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
+++ b/ConfectionaryEnterprise.WcfService/ConfectioneryEnterprise.WcfService.csproj
@@ -45,7 +45,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contract\IDuplexControlService.cs" />
     <Compile Include="Contract\IDuplexFreshnessControlService.cs" />
+    <Compile Include="Contract\ILockService.cs" />
     <Compile Include="Contract\IngredientContract\IIngredientService.cs" />
     <Compile Include="Contract\IngredientContract\IIngredientServiceNew.cs" />
     <Compile Include="Contract\IngredientContract\IngredientService.cs" />
