--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -8,6 +8,14 @@
     <add key="fileIngredients" value="C:\Dasha\University\SeparatedData\confectioneryEnterprise\ConfectionaryEnterprise.WcfService\XML\Ingredients.xml"/>
   </appSettings>
   <system.serviceModel>
+    <!--Session is is similar in server and client-->
+    <!--<bindings>
+      <netTcpBinding>
+        <binding name="customTcp">
+          <reliableSession enabled="true"/>
+        </binding>
+      </netTcpBinding>
+    </bindings>-->
     <services>
       <!--#Laboratorna5-->
       <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
@@ -16,7 +24,10 @@
         <endpoint address="IngredientService" binding="basicHttpBinding" 
           contract="ConfectionaryEnterprise.WcfService.Contract.IngredientContract.IIngredientService" />
         <endpoint address="OneWayService" binding="basicHttpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IOneWayService" />
-        <endpoint address="DuplexFreshnessControlService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IDuplexFreshnessControlService" />
+        <!--<endpoint address="DuplexFreshnessControlService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IDuplexFreshnessControlService" />-->
+        <endpoint address="DuplexControlService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IDuplexControlService" />
+        <!--bindingConfiguration="customTcp"-->
+        <endpoint address="LockService" binding="basicHttpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.ILockService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
