--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -28,6 +28,7 @@
         <endpoint address="DuplexControlService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IDuplexControlService" />
         <!--bindingConfiguration="customTcp"-->
         <endpoint address="LockService" binding="basicHttpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.ILockService" />
+        <endpoint address="InfoService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IInfoService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
