--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -8,7 +8,7 @@
     <add key="fileIngredients" value="C:\Dasha\University\SeparatedData\confectioneryEnterprise\ConfectionaryEnterprise.WcfService\XML\Ingredients.xml"/>
   </appSettings>
   <system.serviceModel>
-    <!--Session is is similar in server and client-->
+    <!--Session is similar in server and client-->
     <!--<bindings>
       <netTcpBinding>
         <binding name="customTcp">
@@ -17,17 +17,21 @@
       </netTcpBinding>
     </bindings>-->
     <services>
-      <!--#Laboratorna5-->
       <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
         <endpoint address="PastryService" binding="basicHttpBinding"
           contract="ConfectioneryEnterprise.WcfService.Contract.PastryContract.IPastryService" />
         <endpoint address="IngredientService" binding="basicHttpBinding" 
           contract="ConfectionaryEnterprise.WcfService.Contract.IngredientContract.IIngredientService" />
+        <!--Laboratorna #8-->
         <endpoint address="OneWayService" binding="basicHttpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IOneWayService" />
+        <!--Laboratorna #8-->
         <!--<endpoint address="DuplexFreshnessControlService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IDuplexFreshnessControlService" />-->
+        <!--Laboratorna #7-->
         <endpoint address="DuplexControlService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IDuplexControlService" />
         <!--bindingConfiguration="customTcp"-->
+        <!--Laboratorna #7-->
         <endpoint address="LockService" binding="basicHttpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.ILockService" />
+        <!--Laboratorna #10-->
         <endpoint address="InfoService" binding="netTcpBinding" contract="ConfectionaryEnterprise.WcfService.Contract.IInfoService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
@@ -37,7 +41,7 @@
           </baseAddresses>
         </host>
       </service>
-      <!--#Laboratorna6-->
+      <!--#Laboratorna4-->
       <!--<service name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
         <host>
           <baseAddresses>
@@ -46,7 +50,7 @@
         </host>
       </service>-->
     </services>
-  <!--#Laboratorna5-->
+  <!--#Laboratorna3-->
   <behaviors>
     <serviceBehaviors>
       <behavior name="mexBehavior">
