--- a/ConfectioneryEnterprise.Host/App.config
+++ b/ConfectioneryEnterprise.Host/App.config
@@ -18,6 +18,7 @@
     </bindings>-->
     <services>
       <service behaviorConfiguration="mexBehavior" name="ConfectioneryEnterprise.WcfService.Contract.PastryContract.PastryService">
+        <!--wsHttpBinding-->
         <endpoint address="PastryService" binding="basicHttpBinding"
           contract="ConfectioneryEnterprise.WcfService.Contract.PastryContract.IPastryService" />
         <endpoint address="IngredientService" binding="basicHttpBinding" 
